[package]
name = "xeno-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
reqwest = { version = "0.11.23", features = ["json"] }
rand = "0.8.5"
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.1"

